tests/NormalTests/paczka1/small_fuzzy/85038943.err
Error in line 10: bk8JYrn S20 -2,6
Error in line 6: bk8JYrn S20 69,5
Error in line 3: spuMoq S20 62,9
Error in line 8: kjtl S20 45,2
Error in line 15: hAptRbI A996 21,9
